main/default/objects/Training_Track_Level_Item__c/Training_Track_Level_Item__c.object-meta.xml
<CustomObject>
    <label>Training Track Level Item</label>
    <nameField>
        <displayFormat>TTLI-{0000000}</displayFormat>
        <label>Training Track Level Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Track Level Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>