main/default/objects/Training_Track_Level_Item__c/fields/Training_Plan__c.field-meta.xml
<CustomField>
    <fullName>Training_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Plan</label>
    <referenceTo>Training_Plan__c</referenceTo>
    <relationshipLabel>Training Track Level Items</relationshipLabel>
    <relationshipName>Training_Track_Level_Items</relationshipName>
    <type>Lookup</type>
</CustomField>