main/default/objects/Training_Track_Level_Item__c/fields/Training_Track_Level__c.field-meta.xml
<CustomField>
    <fullName>Training_Track_Level__c</fullName>
    <label>Training Track Level</label>
    <referenceTo>Training_Track_Level__c</referenceTo>
    <relationshipLabel>Training Track Level Items</relationshipLabel>
    <relationshipName>Training_Track_Level_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>